hphp/hack/test/typecheck/function_pointer/obj_get_null_flavor.php.exp
File "obj_get_null_flavor.php", line 11, characters 3-7:
This call is invalid, this is not a function, it is a nullable type (Typing[4009])
